--- a/css/hamburgerMenu.css
+++ b/css/hamburgerMenu.css
@@ -1,10 +1,78 @@
 body {
-    font-family: sans-serif;
-    background-color: #373c56;
+  font-family: sans-serif;
+  background-color: #373c56;
 }
 #menu {
-    background: white;
-    width: 35px;
-    height: 30px;
-    margin: 30px 0 20px 20px;
+  width: 35px;
+  height: 30px;
+  margin: 30px 0 20px 20px;
+  cursor: pointer;
+}
+.bar {
+  height: 5px;
+  width: 100%;
+  background-color: #b81568;
+  display: block;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+#bar1 {
+  transform: translateY(-4px);
+}
+#bar3 {
+  transform: translateY(4px);
+}
+.nav li a:hover {
+  font-weight: bold;
+}
+.nav li a {
+  color: white;
+  text-decoration: none;
+}
+.nav li {
+  list-style: none;
+  padding: 16px 0;
+}
+.nav {
+  padding: 0;
+  margin: 0 20px;
+  transition: 0.3s ease;
+  display: none;
+}
+.menu-bg, #menu-bar{
+	top: 0;
+	left: 0;
+	position: absolute;
+}
+.menu-bg{
+	z-index: 1;
+	width: 0;
+	height: 0;
+	margin: 30px 0 20px 20px;
+	background: radial-gradient(circle,#e94498,#b81568);
+	border-radius: 50%;
+	transition: 0.3s ease;
+}
+#menu-bar{
+	z-index: 2;	
+}
+.change-bg{
+	width: 550px;
+	height: 540px;
+	transform: translate(-60%,-30%);
+}
+.change .bar {
+  background: white;
+}
+.change #bar1 {
+  transform: translateY(4px) rotate(45deg);
+}
+.change #bar2 {
+  opacity: 0;
+}
+.change #bar3 {
+  transform: translateY(-6px) rotate(-45deg);
+}
+.change {
+  display: block;
 }
