adjusting bg transition

--- a/css/hamburgerMenu.css
+++ b/css/hamburgerMenu.css
@@ -39,27 +39,28 @@ body {
   transition: 0.3s ease;
   display: none;
 }
-.menu-bg, #menu-bar{
-	top: 0;
-	left: 0;
-	position: absolute;
+.menu-bg,
+#menu-bar {
+  top: 0;
+  left: 0;
+  position: absolute;
 }
-.menu-bg{
-	z-index: 1;
-	width: 0;
-	height: 0;
-	margin: 30px 0 20px 20px;
-	background: radial-gradient(circle,#e94498,#b81568);
-	border-radius: 50%;
-	transition: 0.3s ease;
+.menu-bg {
+  z-index: 1;
+  width: 0;
+  height: 0;
+  margin: 30px 0 20px 20px;
+  background: radial-gradient(circle, #e94498, #b81568);
+  border-radius: 50%;
+  /* transition: 0.3s ease; */
 }
-#menu-bar{
-	z-index: 2;	
+#menu-bar {
+  z-index: 2;
 }
-.change-bg{
-	width: 550px;
-	height: 540px;
-	transform: translate(-60%,-30%);
+.change-bg {
+  width: 550px;
+  height: 540px;
+  transform: translate(-60%, -30%);
 }
 .change .bar {
   background: white;
