--- a/css/hamburgerMenu.css
+++ b/css/hamburgerMenu.css
@@ -2,11 +2,15 @@ body {
   font-family: sans-serif;
   background-color: #373c56;
 }
+h2 {
+  display: inline;
+}
 #menu {
   width: 35px;
   height: 30px;
-  margin: 30px 0 20px 20px;
+  margin: 30px 0 20px 40px;
   cursor: pointer;
+  /* border: 1px solid black; */
 }
 .bar {
   height: 5px;
@@ -49,10 +53,10 @@ body {
   z-index: 1;
   width: 0;
   height: 0;
-  margin: 30px 0 20px 20px;
+  margin: 30px 0 20px 40px;
   background: radial-gradient(circle, #e94498, #b81568);
   border-radius: 50%;
-  /* transition: 0.3s ease; */
+  transition: 0.3s ease;
 }
 #menu-bar {
   z-index: 2;
@@ -60,7 +64,7 @@ body {
 .change-bg {
   width: 550px;
   height: 540px;
-  transform: translate(-60%, -30%);
+  transform: translate(-50%, -20%);
 }
 .change .bar {
   background: white;
