--- a/css/hamburgerMenu.css
+++ b/css/hamburgerMenu.css
@@ -10,7 +10,6 @@ h2 {
   height: 30px;
   margin: 30px 0 20px 40px;
   cursor: pointer;
-  /* border: 1px solid black; */
 }
 .bar {
   height: 5px;
@@ -56,7 +55,7 @@ h2 {
   margin: 30px 0 20px 40px;
   background: radial-gradient(circle, #e94498, #b81568);
   border-radius: 50%;
-  transition: 0.3s ease;
+  /* transition: 0.3s ease; */
 }
 #menu-bar {
   z-index: 2;
