--- a/css/hamburgerMenu.css
+++ b/css/hamburgerMenu.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: sans-serif;
   background-color: #373c56;
@@ -79,4 +82,7 @@ h2 {
 }
 .change {
   display: block;
+}
+.menu-letters {
+    color: white;
 }
