--- a/hbc/assets/css/hamburgerMenu.css
+++ b/hbc/assets/css/hamburgerMenu.css
@@ -3,7 +3,7 @@
 }
 body {
   font-family: sans-serif;
-  background-color: #373c56;
+  /* background-color: #373c56; */
 }
 #menu {
   width: 35px;
@@ -11,11 +11,11 @@ body {
   margin: 30px 0 20px 40px;
   cursor: pointer;
 }
-/* h1 {
+h1 {
   position: absolute;
   top: 0;
   right: 0;
-} */
+}
 .bar {
   height: 5px;
   width: 100%;
