--- a/css/hamburgerMenu.css
+++ b/css/hamburgerMenu.css
@@ -1,40 +1,38 @@
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 body {
   font-family: sans-serif;
-  background-color: #373c56;
+  background-color: #0c0b08;
 }
 #menu {
-  width: 35px;
+  width: 28px;
   height: 30px;
-  margin: 30px 0 20px 40px;
   cursor: pointer;
 }
-/* h1 {
-  position: absolute;
-  top: 0;
-  right: 0;
-} */
 .bar {
   height: 5px;
   width: 100%;
-  background-color: #b81568;
-  display: block;
+  background-color: #e3c186;
   border-radius: 5px;
   transition: 0.3s ease;
 }
 #bar1 {
-  transform: translateY(-4px);
+  transform: translateY(3px);
+}
+#bar2 {
+  transform: translateY(6px);
 }
 #bar3 {
-  transform: translateY(4px);
+  transform: translateY(9px);
 }
 .nav li a:hover {
   font-weight: bold;
 }
 .nav li a {
-  color: white;
+  color: #0c0b08;
   text-decoration: none;
 }
 .nav li {
@@ -50,17 +48,15 @@ body {
 .menu-bg,
 #menu-bar {
   top: 0;
-  left: 0;
-  position: absolute;
+  right: 0;
 }
 .menu-bg {
   z-index: 1;
   width: 0;
-  height: 0;
-  margin: 30px 0 20px 40px;
-  background: radial-gradient(circle, #e94498, #b81568);
-  border-radius: 50%;
-  /* transition: 0.3s ease; */
+  /* margin: 30px 0 20px 40px; */
+  background: radial-gradient(circle, #e3c186, #e3c186);
+  /* border-radius: 50%; */
+  transition: 0.3s ease;
 }
 #menu-bar {
   z-index: 2;
@@ -71,20 +67,26 @@ body {
   transform: translate(-50%, -20%);
 }
 .change .bar {
-  background: white;
+  background: #0c0b08;
 }
 .change #bar1 {
-  transform: translateY(4px) rotate(45deg);
+  transform: translateY(8px) rotate(45deg);
 }
 .change #bar2 {
   opacity: 0;
 }
 .change #bar3 {
-  transform: translateY(-6px) rotate(-45deg);
+  transform: translateY(-2px) rotate(-45deg);
 }
 .change {
   display: block;
 }
 .menu-letters {
-    color: white;
+  color: #e3c186;
+  font-size: 1.75rem;
+}
+.menu-box {
+  border: 1px solid #e3c186;
+  display: flex;
+  justify-content: flex-end;
 }
